/******************************
 - wiki http://wiki.n.miui.com/pages/viewpage.action?pageId=37489838
 uuid 用户id
 zuid 主播id 也就是宠爱团创建者 也代表群id
 admin_id 管理员
******************************/

package com.wali.live.proto;

import "VFansCommon.proto";

option java_package = "com.wali.live.proto";
option java_outer_classname = "VFansProto";

/*
- 创建群请求
- zhibo.vfans.create_group
*/
message CreateGroupReq {
    required uint64 zuid = 1; //创建人id
    optional string group_name = 2; // 群名称
}

message CreateGroupRsp {
    required int32 err_code = 1;
    optional string err_msg = 2; //返回信息（用于错误提醒），建议客户端在该值非空时使用
}

/*
- 更新群信息请求
- zhibo.vfans.update_group
*/
message UpdateGroupReq {
    optional uint64 zuid = 1; //主播id
    required uint64 admin_id = 2; //管理员id
    optional string group_name = 3; // 群名称
}
message UpdateGroupRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

/*
- 拉取用户加入的宠爱团列表
- zhibo.vfans.get_grouplist
*/
message GetGroupListReq {
    required uint64 uuid = 1; //用户id
    optional int32 start = 2 [default = 0]; //group_list 分页起始信息
    optional int32 limit = 3 [default = 100]; //group_list 分页数量
}

message GetGroupListRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    optional bool create_rights = 3; // 只有当start=0时才设置改字段
    optional MyGroupInfo my_group = 4; // 只有当start=0时才设置改字段
    repeated MemGroupInfo group_list = 5;
    optional int32 next_start = 6; // 6-7 MemGroupInfo 分页拉取信息
    optional bool has_more = 7;
}

// 主播创建宠爱团信息
message MyGroupInfo {
    required uint64 zuid = 1;
    required string group_name = 2;
    optional uint64 create_time = 3; // unix时间戳 秒
    optional int32 charm_exp = 4; // 主播魅力值榜
    optional string charm_title = 5; // 魅力值称号
    optional int32 ranking = 6; // 魅力值排名
    optional int32 charm_level = 7; // 魅力值等级
}

// 加入宠爱团信息
message MemGroupInfo {
    required uint64 zuid = 1;
    optional string group_name = 2; // 宠爱团名称
    optional int32 pet_exp = 3; // 宠爱值
    optional int32 pet_level = 4; // 宠爱等级
    optional uint64 join_time = 5; // 加入时间
    optional uint64 vip_expire = 6; // 会员过期时间
    optional int32 vip_level = 7; // vip 等级, 只有当vip_expire大于当前时间才有效
    optional string medal_value = 8; // 宠爱等级对应的勋章
    optional string zuid_nickname = 9; // 创建者昵称
    optional uint64 zuid_avatar = 10; // 创建者头像
}

/*
- 佩戴勋章请求
- zhibo.vfans.use_medal
*/
message UseMedalReq {
    optional uint64 zuid = 1; // zuid=0 取消佩戴 >0 佩戴改主播勋章
    required uint64 uuid = 2;
}

message UseMedalRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

/*
- 宠爱团详情
- zhibo.vfans.group_detail
*/
message GroupDetailReq {
    required uint64 zuid = 1; //主播id
    required uint64 uuid = 2; //用户id，服务端调用传0
}
message GroupDetailRsp {

    required int32 err_code = 1;
    optional string err_msg = 2;

    /*宠爱团本身信息: 3->19*/
    optional uint64 zuid = 3;
    optional string group_name = 4;
    optional int32 charm_exp = 5; // 魅力值
    optional string charm_title = 6; // 主播魅力值称号
    optional int32 charm_level = 7; // 魅力值等级
    optional int32 ranking = 8; // 团排名
    optional int32 next_charm_exp = 9; // 下一等级经验值
    optional uint32 current_member = 10; // 团员数
    optional uint32 member_limit = 11; // 团员最大值

    /*宠爱团成员信息*/
    optional GroupMemType mem_type = 20;
    optional int32 my_pet_exp = 21; // 我的亲密值
    optional int32 my_pet_level = 22; // 亲密等级
    optional int32 pet_ranking = 23; // 亲密排名
    optional uint64 vip_expire = 24; // 会员过期时间（秒）
    optional int32 vip_level = 25; // vip 等级, 只有当vip_expire大于当前时间才有效
    optional string medal_value = 26; // 团勋章
    optional bool user_medal = 27; // 是否佩戴勋章
    optional bool msg_notify = 28; //消息通知
    optional bool forbid_noise = 29; //禁言
}

/*
- 删除群成员请求
- zhibo.vfans.remove_groupmem
*/
message RemoveGroupMemReq {
    required uint64 zuid = 1; //主播id
    required uint64 admin_id = 2; //处理人
    required uint64 mem_id = 3; //被处理人
    optional bool add_black = 4; // 不再接收该用户入团申请
}

message RemoveGroupMemRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

/*
- 申请加群请求
- zhibo.vfans.apply_joingroup
*/
message ApplyJoinGroupReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2; //申请人
    optional string apply_msg = 4; //请求信息
    optional string room_id = 5;
}
message ApplyJoinGroupRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

/*
- 处理加群请求
- zhibo.vfans.handle_joingroup
*/

message HandleJoinGroupReq {
    required uint64 zuid = 1; //主播id
    required uint64 admin_id = 2; //处理人
    required uint64 mem_id = 3; //请求加群人
    required ApplyJoinResult join_result = 4; //处理结果
    optional bool add_black = 5; // 不再接收该用户入团申请
    optional uint64 notify_id = 6; // 通知消息id
}

message HandleJoinGroupRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

/*
- 列表拉取群成员请求
- zhibo.vfans.member_list
*/
message MemberListReq {
    required uint64 zuid = 1; //群id
    optional uint64 uuid = 2; //处理人
    optional int32 start = 3; //分页拉取index开始位置
    optional int32 limit = 4; //分页拉取数量限制
    optional MemRankType rank_type = 5 [default = ORDER_BY_EXP]; // 当前只支持 1和2
    optional RankDateType date_type = 6 [default = TOTAL_TYPE];
}

message MemberListRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    optional int32 next_start = 3;
    optional bool has_more = 4;
    repeated MemberInfo mem_list = 5; //成员信息
    // 6-10 只有 rank_type=ORDER_BY_EXP时才有效
    optional int32 ranking = 6; // 我的排名
    optional int32 pet_exp = 7; // 我的经验值
    optional int32 pet_level = 8; // 宠爱等级
    optional string medal_value = 9; // 宠爱等级对应的勋章
    optional int32 catch_up_exp = 10; // 和上一个排名相差经验值
}


message MemberInfo {
    required uint64 uuid = 1;
    optional string nickname = 2; // 昵称
    optional uint64 avatar = 3; // 头像
    optional int32 pet_exp = 4; // 宠爱值
    optional int32 pet_level = 5; // 宠爱等级
    optional GroupMemType mem_type = 6; // 成员类型
    optional string medal_value = 7; // 宠爱等级对应的勋章
    optional bool is_following = 8; //是否关注
    optional bool is_bothfollowing = 9; //是否双向关注
    optional string sign = 10; //  用户签名 rank_type=ORDER_BY_MEMTYPE才设置
    optional bool forbid_noise = 11; // 是否禁言
    optional uint64 join_time = 14; //入团时间
    optional int32 vip_type = 15; //vip类型:0 非VIP,1 月费VIP,2 年费VIP
    optional int32 last_7days_exp = 16; //过去七天的经验值
}

/*
- 团排行榜
- zhibo.vfans.group_ranklist
*/
message GroupRankListReq {
    required uint64 uuid = 1;
    required RankDateType date_type = 2;
    optional int32 start = 3;
    optional int32 limit = 4;
}

message GroupRankListRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    optional int32 next_start = 3;
    optional bool has_more = 4;
    repeated GroupRankInfo group_list = 5;
    optional int32 ranking = 6; // 我的排名
    optional int32 charm_exp = 7; // 我的经验值
    optional int32 charm_level = 8; // 宠爱等级
    optional string charm_title = 9; // 宠爱等级对应的勋章
    optional int32 catch_up_exp = 10; // 和上一个排名相差经验值
    optional string group_name = 11; // 宠爱团名字 客户端展示需要
}

message GroupRankInfo {
    required uint64 zuid = 1;
    optional string group_name = 2;
    optional int32 charm_exp = 3;
    optional string charm_title = 4;
    optional uint64 avatar = 5; // 头像
    optional bool is_following = 6; //是否关注
    optional bool is_bothfollowing = 7; //是否双向关注
    optional int32 ranking = 8; // 排名
    optional int32 charm_level = 9; // 魅力值等级
}

/*
- 查看群完成任务
- zhibo.vfans.group_joblist
*/
message GroupJobListReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2;
}
message GroupJobListRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    repeated GroupJobInfo job_list = 3; // 只显示已经过完成的任务
    optional string job_prompt_msg = 4; // 每日任务提示语
    repeated LimitedGroupJobInfo limited_job_list = 5; //限次任务列表
}

/*
- 领取宠爱值
- zhibo.vfans.finish_groupjob
*/
message FinishGroupJobReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2;
    required GroupJobType job_type = 3;
    optional string room_id = 4;
}

message FinishGroupJobRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}
/*
- 退出宠爱团
- zhibo.vfans.quit_group
*/
message QuitGroupReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2;
}

message QuitGroupRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}
//*************************************************************//

/*
- 修改群成员请求
- zhibo.vfans.update_groupmem
*/
message UpdateGroupMemReq {
    required uint64 zuid = 1; //群id
    required uint64 admin_id = 2; //处理人
    optional UpdateGroupMemInfo update_mem_info = 3; //需要更新的成员新群信息
}
message UpdateGroupMemRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

message UpdateGroupMemInfo {
    required uint64 uuid = 1;
    required UpdateGroupMemType update_type = 2;
    optional GroupMemType mem_type = 3; // update_type = SET_ADMIN
    optional bool forbid_noise = 4; // update_type=FORBID_NOISE
    optional bool add_black = 5; // update_type=REMOVE_MEMBER, 是否添加到黑名单
}

enum UpdateGroupMemType {
    SET_ADMIN = 1; // 设置管理员
    CANCEL_ADMIN = 2;
    FORBID_NOISE = 3;
    REMOVE_MEMBER = 4;
}

/*
- 更新用户群设置
- zhibo.vfans.update_memgroup_setting
*/

message UpdateMemGroupSettingReq {
    required uint64 uuid = 1;
    required MemGroupSettingInfo setting_info = 2;
}

message UpdateMemGroupSettingRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

message MemGroupSettingInfo {
    required uint64 zuid = 1;
    required MemGroupSettingType setting_type = 2;
    optional bool msg_notify = 3; //setting_type=MSG_NOTIFY
    optional bool user_medal = 4; //setting_type=USE_MEDAL
}

enum MemGroupSettingType {
    MSG_NOTIFY = 1; // 消息通知
    USE_MEDAL = 2; // 佩戴勋章
}

/*
- 设置宠爱团勋章
- zhibo.vfans.set_groupmedal
*/
message SetGroupMedalReq {
    required uint64 zuid = 1; //主播id
    required uint64 admin_id = 2; //管理员
    repeated GroupMedalInfo medal_list = 3;
}
message SetGroupMedalRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

/*
- 查询宠爱团勋章
- zhibo.vfans.get_groupmedal
*/
message GetGroupMedalReq {
    required uint64 zuid = 1; //主播id
    required uint64 uuid = 2;
}

message GetGroupMedalRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    repeated string medal_list = 3; // 勋章列表
}
/*
- 分享主播直播
- zhibo.vfans.share_live
*/
message ShareLiveReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2;
}

message ShareLiveRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
}

/*
- 执行宠爱团任务
- zhibo.vfans.exec_groupjob
*/
message ExecGroupJobReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2;
    required GroupJobType job_type = 3;
}

message ExecGroupJobRsp {
    required int32 err_code = 1;
}

//申请加入宠爱团群通知 APPLY_JOIN = 1;//申请加群
message ApplyJoinVFansGroupNotify {
    required uint64 candidate = 1; //申请人
    required uint64 fgId = 2; //群id
    required GroupMemType memType = 3 [default = MASS]; //进入身份，群众，管理员...
    optional uint64 fgOwner = 4; //群主
    optional string applyMsg = 5; //申请信息
    optional uint64 ts = 6; //时间戳
    optional JoinIntentionType joinType = 7; //加群动机，主动，受邀...
    optional string msg = 8; //文案，建议客户端在该值非空时使用
    optional string groupName = 9; //群名称
    optional string candiName = 10; //申请人名称
    optional uint64 candiHeadTs = 11; //申请人头像时间戳
}

//处理加群结果通知 HANDLE_JOIN = 3;//处理加群
message HandleJoinVFansGroupNotify {
    required uint64 handler = 1; //处理人
    required uint64 candidate = 2; //被处理人
    required uint64 fgId = 3; //群id
    optional uint64 fgOwner = 4; //群主
    optional ApplyJoinResult handleResult = 5; //处理结果
    optional GroupMemType memType = 6; //请求加群身份
    optional JoinIntentionType joinType = 7; //加群动机，主动，受邀...
    optional uint64 referrer = 8; //推荐人， 如果有就填
    optional string msg = 9; //文案，建议客户端在该值非空时使用
    optional uint64 handleNotifyId = 10; //消息id
    optional string groupName = 11; //群名称
    optional string handlerName = 12; //处理人名称
    optional uint64 handlerHeadTs = 13; //处理人头像时间戳
    optional string candiName = 14; //被处理人名称
    optional uint64 candiHeadTs = 15; //被处理人头像时间戳
    optional string groupIcon = 16; //群头像
    optional uint64 fgOwnerHeadTs = 17; //群主头像时间戳
}

//修改宠爱团成员通知 UPDATE_MEM = 5;//更新群成员信息
message UpdateFansGroupMemNotify {
    required uint64 handler = 1; //处理人
    required uint64 candidate = 2; //被处理人
    required uint64 fgId = 3; //群id
    optional uint64 fgOwner = 4; //群主
    optional uint64 ts = 5; //时间戳
    optional VfansGroupMemInfo fgMemInfo = 6; //该成员新群信息
    optional string msg = 7; //文案，建议客户端在该值非空时使用
    optional string groupName = 8; //群名称
    optional string handlerName = 9; //处理人名称
    optional uint64 handlerHeadTs = 10; //处理人头像时间戳
    optional string candiName = 11; //被处理人名称
    optional uint64 candiHeadTs = 12; //被处理人头像时间戳
    optional string groupIcon = 13; //群头像
    optional uint64 fgOwnerHeadTs = 14; //群主头像时间戳
}

//宠爱团成员群信息
message VfansGroupMemInfo {
    required uint64 uuid = 1; //用户id
    optional GroupMemType memType = 2; //成员新类型
    optional string nickname = 3; //成员昵称
}

/*
- 获取团最近完成任务
- zhibo.vfans.get_recentjob
*/
message GetRecentJobReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2;
}

message GetRecentJobRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    repeated RecentJobInfo job_list = 3;
}

/*
- 检查是否可以购买vip包月
- zhibo.vfans.get_buyvippermit
*/
message GetBuyVipPermitReq {
    required uint64 zuid = 1;
    required uint64 uuid = 2;
}

message GetBuyVipPermitRsp {
    required int32 err_code = 1;
    optional string err_msg = 2;
    optional uint64 next_buytime = 3; // 下次可以购买vip时间 如果大于0 则不可以购买
    optional uint32 buyinterval = 4; //购买vip间隔 单位:年, 用于购买提示使用
}